@@ -41,7 +41,8 @@ grub_mkdevicemap=${sbindir}/`echo grub-mkdevicemap | sed ${transform}`
 grub_probe=${sbindir}/`echo grub-probe | sed ${transform}`
 grub_editenv=${bindir}/`echo grub-editenv | sed ${transform}`
 rootdir=
-grub_prefix=`echo /boot/grub | sed ${transform}`
+bootdir=
+grubdir=`echo "/@bootdirname@/@grubdirname@" | sed 's,//*,/,g'`
 modules=
 
 install_device=
@@ -69,8 +70,8 @@ Install GRUB on your drive.
   -h, --help              print this message and exit
   -v, --version           print the version information and exit
   --modules=MODULES       pre-load specified modules MODULES
-  --root-directory=DIR    install GRUB images under the directory DIR
-                          instead of the root directory
+  --boot-directory=DIR    install GRUB images under the directory DIR/@grubdirname@
+                          instead of the $grubdir directory
   --grub-setup=FILE       use FILE as grub-setup
   --grub-mkimage=FILE     use FILE as grub-mkimage
   --grub-mkdevicemap=FILE use FILE as grub-mkdevicemap
@@ -88,11 +89,8 @@ fi
 
 INSTALL_DEVICE can be a GRUB device name or a system device filename.
 
-$self copies GRUB images into /boot/grub (or /grub on NetBSD and
-OpenBSD), and uses grub-setup to install grub into the boot sector.
-
-If the --root-directory option is used, then $self will copy
-images into the operating system installation rooted at that directory.
+$self copies GRUB images into $grubdir, and uses grub-setup
+to install grub into the boot sector.
 
 Report bugs to <bug-grub@gnu.org>.
 EOF
@@ -134,10 +132,16 @@ do
     --font=*)
 	;;
 
+# Accept for compatibility
     --root-directory)
 	rootdir=`argument $option "$@"`; shift;;
     --root-directory=*)
 	rootdir=`echo "$option" | sed 's/--root-directory=//'` ;;
+
+    --boot-directory)
+	bootdir=`argument $option "$@"`; shift;;
+    --boot-directory=*)
+	bootdir=`echo "$option" | sed 's/--boot-directory=//'` ;;
 
     --grub-setup)
 	grub_setup=`argument $option "$@"`; shift;;
@@ -215,23 +219,18 @@ if test $debug = yes; then
     setup_verbose="--verbose"
 fi
 
-# Initialize these directories here, since ROOTDIR was initialized.
-case "$host_os" in
-netbsd* | openbsd*)
-    # Because /boot is used for the boot block in NetBSD and OpenBSD, use /grub
-    # instead of /boot/grub.
-    grub_prefix=`echo /grub | sed ${transform}`
-    bootdir=${rootdir}
-    ;;
-*)
-    # Use /boot/grub by default.
-    bootdir=${rootdir}/boot
-    ;;
-esac
+if [ -z "$bootdir" ]; then
+    # Default bootdir if bootdir not initialized.
+    bootdir=/@bootdirname@
 
-grubdir=${bootdir}/`echo grub | sed ${transform}`
+    if [ -n "$rootdir" ] ; then
+        # Initialize bootdir if rootdir was initialized.
+        bootdir=${rootdir}/@bootdirname@
+    fi
+fi
+
+grubdir=`echo "${bootdir}/@grubdirname@" | sed 's,//*,/,g'`
 device_map=${grubdir}/device.map
-
 grub_probe="${grub_probe} --device-map=${device_map}"
 
 # Check if GRUB is installed.
